--- a/_layouts/release-page.html
+++ b/_layouts/release-page.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 
-{% include ReleasesListSwiper/index.html %}
+{% include ReleaseListSwiper/index.html class='release-list-swiper__container--release-page' %}
 {% include ReleasePage/index.html %}
