--- a/_components/ReleasePage/styles.scss
+++ b/_components/ReleasePage/styles.scss
@@ -196,15 +196,7 @@
   background-color: #fff;
   color: #000;
   position: relative;
-  padding: 2em .6em 6em;
-
-  @include media(M) {
-    padding-bottom: 8em;
-  }
-
-  @include media(L) {
-    padding-bottom: 12em;
-  }
+  padding: 2em .6em 4em;
 
   &__wrapper {
     max-width: 600px;
@@ -216,7 +208,7 @@
     }
   }
 
-  &__link {
+  a {
     color: #0046ff;
   }
 
@@ -242,52 +234,5 @@
   &__btn-twitter {
     @extend .btn-social;
     background-color: #20a7c6;
-  }
-}
-
-.item {
-  text-align: left;
-  padding: 0 5%;
-
-  &.item-releases {
-    img.cover {
-      max-width: 700px;
-      display: block;
-      margin-bottom: 20px;
-    }
-    ol {
-      margin: 0 0 20px;
-      padding: 0 0 0 35px;
-
-      li {
-
-      }
-    }
-  }
-
-  &.item-artists {
-  }
-
-  &.item-events {
-  }
-
-  &.item-news {
-  }
-
-  .bandcamp-item {
-    display: block;
-    width: 100%;
-    overflow: hidden;
-    max-width: 320px;
-    border: 1px solid #4e4e4e;
-    margin-bottom: 20px;
-    background: #333;
-
-    &__track {
-      height: 82px;
-    }
-    &__release {
-      height: 400px;
-    }
   }
 }
