--- a/_layouts/artist-page.html
+++ b/_layouts/artist-page.html
@@ -2,50 +2,42 @@
 layout: default
 ---
 
-<article class="item item-artists">
-  <h1>{{ page.title }}</h1>
+<h1>{{ page.title }}</h1>
 
-  <img 
-    data-src="holder.js/700x700?auto=yes&text={{ page.title }}&fg=000&bg=0ff"
-    data-layzr="{{ site.baseurl }}/assets/img/artists/{{ page.slug }}.jpg"
-    data-layzr-retina="{{ site.baseurl }}/assets/img/artists/{{ page.slug }}@2x.jpg"
-  >
+<img src="{{ site.baseurl }}/assets/img/artists/{{ page.slug }}.jpg" alt="{{ page.title }}">
 
-  {% if page.soundcloud-id %}
-    <iframe width="100%" height="450" scrolling="no" frameborder="no"
-      data-layzr="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud-id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"
-    ></iframe>
-  {% endif %}
+{% if page.soundcloud-id %}
+  <iframe width="100%" height="450" scrolling="no" frameborder="no"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud-id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"
+  ></iframe>
+{% endif %}
 
-  {% if page.name %}
-    <div>Name: {{ page.name }}</div>
-  {% endif %}
+{% if page.name %}
+  <div>Name: {{ page.name }}</div>
+{% endif %}
 
-  {% if page.location %}
-    <div>Location: {{ page.location }}</div>
-  {% endif %}
+{% if page.location %}
+  <div>Location: {{ page.location }}</div>
+{% endif %}
 
-  {% if page.website %}
-    <a href="{{ page.website }}"><span class="icon-public"></span></a>
-  {% endif %}
+{% if page.website %}
+  <a href="{{ page.website }}"><span class="icon-public"></span></a>
+{% endif %}
 
-  {% if page.bandcamp %}
-    <a href="{{ page.bandcamp }}"><span class="icon-bandcamp"></span></a>
-  {% endif %}
+{% if page.bandcamp %}
+  <a href="{{ page.bandcamp }}"><span class="icon-bandcamp"></span></a>
+{% endif %}
 
-  {% if page.facebook %}
-    <a href="{{ page.facebook }}"><span class="icon-facebook"></span></a>
-  {% endif %}
+{% if page.facebook %}
+  <a href="{{ page.facebook }}"><span class="icon-facebook"></span></a>
+{% endif %}
 
-  {% if page.soundcloud %}
-    <a href="{{ page.soundcloud }}"><span class="icon-soundcloud"></span></a>
-  {% endif %}
+{% if page.soundcloud %}
+  <a href="{{ page.soundcloud }}"><span class="icon-soundcloud"></span></a>
+{% endif %}
 
-  <!-- {% if page.discogs %}
-    <a href="{{ page.discogs }}"><span class="icon-discogs"></span></a>
-  {% endif %} -->
+<!-- {% if page.discogs %}
+  <a href="{{ page.discogs }}"><span class="icon-discogs"></span></a>
+{% endif %} -->
 
-  {{ content }}
-
-</article>
-
+{{ content }}
