--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -7,15 +7,13 @@
 @import 'vendor/svg-icons/svg-icons';
 
 @import 'ui/base';
+@import 'ui/flex-sticky';
 @import 'ui/buttons';
 @import 'ui/unvisible';
-@import '_components/ArtistsList/styles';
 @import '_components/Header/styles';
 @import '_components/LogoLink/styles';
 @import '_components/Hero/styles';
-@import '_components/Friends/styles';
-@import '_components/ReleasesList/styles';
-@import '_components/ReleasesListSwiper/styles';
+@import '_components/ReleaseListSwiper/styles';
 @import '_components/ReleasePage/styles';
 @import '_components/Footer/styles';
 @import '_components/SVG/deco-triangle';
