--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -1,93 +1,45 @@
 @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-$primary-color: #f0f;
-$text-color: #fff;
-$accent-color: #fff;
-$link-color: $accent-color;
-$selection-color: #ff0;
-$m: 10px;
-
-.gigantic, .huge, .large, .bigger, .big, 
-h1, h2, h3, h4, h5, h6 {
-  color: $accent-color;
-  font-weight: 400;
-}
-.gigantic {
-  font-size: 110px;
-  line-height: 1.09;
-}
-.huge, h1 {
-  font-size: 68px;
-  line-height: 1.4;
-}
-.large, h2 {
-  font-size: 42px;
-  line-height: 1.4;
-}
-.bigger, h3 {
-  font-size: 26px;
-  line-height: 1.4;
-}
-.big, h4 {
-  font-size: 22px;
-  line-height: 1.4;
-}
-.small, small {
-  font-size: 10px;
-  line-height: 1.2;
-}
-
-
-p {
-  margin: 0 0 .5em;
-}
-
-hr {
-  border: solid rgba(#000,.3);
-  border-width: 1px 0 0;
-  margin: 1em 0;
-}
-
-img {
-  max-width: 100%;
-}
-
-a {
-  color: $link-color;
-  text-decoration: none;
-  // outline: 0;
-  // transition: color .15s ease-in-out;
-
-  // &:hover,
-  // &.active {
-  //   color: $text-color;
-  // }
-}
-
-.is-visible {
-  opacity: 1;
-}
-
 html {
   position: relative;
   height: 100%;
 }
 
 body {
-  // background: #000 url(../img/subtlepatterns/dark_wood.png);
-  // background-color: #000;
   background-color: #8f0100;
   background-image:  url(https://content.sentimony.com/assets/img/backgrounds/sombrero-red.jpg);
   background-attachment: fixed;
-  // background-size: cover;
-  // background-position: center;
+  background-size: cover;
+  background-position: center;
   font: 400 15px/1.5 'Montserrat', sans-serif;
-  color: $text-color;
+  color: #fff;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   position: relative;
   height: 100%;
   margin: 0;
   text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  font-weight: 400;
+  margin: .5em 0;
+}
+
+a {
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  display: inline-block;
+}
+
+hr {
+  border: solid rgba(#000,.3);
+  border-width: 1px 0 0;
+  margin: 1em 0;
 }
