--- a/_scss/ui/_buttons.scss
+++ b/_scss/ui/_buttons.scss
@@ -66,7 +66,7 @@
 }
 
 @mixin btn-social {
-  color: #fff;
+  color: #fff !important;
   font-size: 14px;
   padding: .8em 1.2em;
   // display: inline-block;
