--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
     </div>
   </div>
 
-  <div id="bigOne"></div>
+  <div id="app" style="font-size: 6px; background-color: #000;></div>
 
   <script src="{{ site.baseurl }}/assets/js/bundle.min.js"></script>
 
@@ -46,15 +46,13 @@ layout: compress
     };
     firebase.initializeApp(config);
 
-    var bigOne = document.getElementById('bigOne');
+    var app = document.getElementById('app');
     var dbRef = firebase.database().ref().child('releases').child('irukanji-z-lisu').child('title');
-    dbRef.on('value', snap => bigOne.innerText = snap.val());
+    dbRef.on('value', snap => app.innerText = snap.val());
   </script>
 
-  {% if site.environment == 'production' %}
-    {% include Analytics/google-analytics.html %}
-    {% include Analytics/yandex-metrika.html %}
-  {% endif %}
+  {% include Analytics/google-analytics.html %}
+  {% include Analytics/yandex-metrika.html %}
 
 </body>
 </html>
