--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ layout: compress
       {{ content }}
     </div>
     <div class="flex-sticky__footer">
-      {% include Footer/index.html %}
+      {% include FooterBlock/index.html %}
     </div>
   </div>
 
