--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
 
   <div class="flex-sticky">
     <div class="flex-sticky__header">
-      {% include Header/index.html %}
+      {% include MainMenu/index.html %}
     </div>
     <div class="flex-sticky__content">
       {{ content }}
