--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -18,3 +18,4 @@
 @import '_components/SVG/deco-triangle';
 @import '_components/IframeSize/styles';
 @import '_components/FooterBlock/styles';
+@import '_layouts/artist-page-styles';
