--- a/_layouts/artist-page-styles.scss
+++ b/_layouts/artist-page-styles.scss
@@ -1,11 +1,12 @@
 .iframe-holder {
-    max-width: 1200px;
+    max-width: 777px;
     margin-left: auto;
     margin-right: auto;
 
     &__ratio {
         position: relative;
         @include ratio(100%,16,9);
+        margin-bottom: 2em;
     }
 
     &__iframe {
