--- a/_layouts/artist-page.html
+++ b/_layouts/artist-page.html
@@ -46,7 +46,7 @@ layout: default
   <p>
     <div class="iframe-holder">
       <div class="iframe-holder__ratio">
-        <iframe class="iframe-holder__iframe" src="https://www.youtube.com/embed/{{ page.youtube_id }}?ecver=1" allowfullscreen></iframe>
+        <iframe class="iframe-holder__iframe" src="https://www.youtube.com/embed/videoseries?list={{ page.youtube_id }}" allowfullscreen></iframe>
       </div>
     </div>
   </p>
