--- a/_layouts/artist-page-styles.scss
+++ b/_layouts/artist-page-styles.scss
@@ -1,22 +1,28 @@
+.photo-cover {
+  display: block;
+  margin: 0 auto;
+  max-width: 400px;
+}
+
 .iframe-holder {
-    max-width: 777px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 777px;
+  margin-left: auto;
+  margin-right: auto;
 
-    &__ratio {
-        position: relative;
-        @include ratio(100%,16,9);
-        margin-bottom: 2em;
-    }
+  &__ratio {
+    position: relative;
+    @include ratio(100%,16,9);
+    margin-bottom: 2em;
+  }
 
-    &__iframe {
-        border: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+  &__iframe {
+    border: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
