--- a/_layouts/artist-page.html
+++ b/_layouts/artist-page.html
@@ -10,6 +10,12 @@ layout: default
   <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/{{ page.soundcloud-id }}&amp;color=00aabb&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;sharing=false&amp;show_bpm=true"></iframe>
 {% endif %} -->
 
+{% if page.photo_cover %}
+<p>
+  <img class="photo-cover" src="{{ page.photo_cover }}" alt="{{ page.title }}">
+</p>
+{% endif %}
+
 {% if page.name %}
   <div>Name: {{ page.name }}</div>
 {% endif %}
