--- a/_components/ReleaseListSwiper/styles.scss
+++ b/_components/ReleaseListSwiper/styles.scss
@@ -153,6 +153,47 @@
     }
   }
 
+  &__prev,
+  &__next {
+    display: none;
+    background-color: #fff;
+    background-position: center;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 900;
+    top: 25%;
+    margin-top: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 80px;
+    cursor: pointer;
+    transition: opacity .2s ease;
+    opacity: .7;
+
+    @include media(M) {
+      display: block;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &.swiper-button-disabled {
+      opacity: .2;
+    }
+  }
+
+  &__prev {
+    left: 5px;
+    background-image: url(/assets/img/svg-icons/arrow-left.svg);
+  }
+
+  &__next {
+    right: 5px;
+    background-image: url(/assets/img/svg-icons/arrow-right.svg);
+  }
+
   .swiper-scrollbar {
     left: 4.5%;
     width: 91%;
@@ -160,14 +201,5 @@
 
   .swiper-scrollbar-drag {
     background-color: rgba(#fff,.3);
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    display: none;
-
-    @include media(M) {
-      display: block;
-    }
   }
 }
