rework artist & release layouts

--- a/_components/PageRelease/styles.scss
+++ b/_components/PageRelease/styles.scss
@@ -1,4 +1,4 @@
-.release-page {
+.page-release {
   position: relative;
   padding: 0 .6em;
 
@@ -209,7 +209,7 @@
   }
 }
 
-.release-page-content {
+.page-release-content {
   // display: none;
   text-align: left;
   background-color: #fff;
