--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
     </div>
   </div>
 
-  <script src="{{ site.baseurl }}/assets/js/bundle.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/bundle.js"></script>
 
   <!-- <div id="app" style="font-size: 6px; background-color: #000;"></div>
 
