--- a/_components/MainMenu/styles.scss
+++ b/_components/MainMenu/styles.scss
@@ -1,11 +1,6 @@
 .main-menu {
-  // position: fixed;
   position: relative;
   z-index: 1000;
-  // top: 0;
-  // left: 0;
-  // width: 100%;
-  // background: rgba(#000, .5);
   padding: 0 .6em;
 
   &__container {
@@ -27,7 +22,7 @@
 
     &:hover,
     &.is-selected {
-      background-color: rgba(#fff,.3);
+      background-color: $colorBgLight;
     }
   }
 
@@ -64,26 +59,6 @@
         margin: 0 auto;
       }
 
-      &-icon-bandcamp {
-        @extend .icon-bandcamp;
-      }
-
-      &-icon-facebook {
-        @extend .icon-facebook;
-      }
-
-      &-icon-soundcloud {
-        @extend .icon-soundcloud;
-      }
-
-      &-icon-youtube {
-        @extend .icon-youtube;
-      }
-
-      &-icon-bandcamp,
-      &-icon-facebook,
-      &-icon-soundcloud,
-      &-icon-youtube,
       &-tooltip {
         display: none;
       }
