--- a/_components/ReleaseListSwiper/styles.scss
+++ b/_components/ReleaseListSwiper/styles.scss
@@ -82,12 +82,12 @@
         width: 100%;
         height: 100%;
         border-radius: 8px;
-        background-color: rgba(#000,.5);
+        background-color: $colorBgBlack;
       }
 
       &-img {
         border-radius: 8px;
-        box-shadow: 0 2px 10px 0 rgba(#000,.5);
+        box-shadow: $shadow;
         display: block;
         position: absolute;
         z-index: 30;
