--- a/_scss/ui/_vue-tabs-customize.scss
+++ b/_scss/ui/_vue-tabs-customize.scss
@@ -9,7 +9,7 @@
     .tab {
       opacity: .5;
       transition: opacity .2s ease;
-      margin-left: 1.1em;
+      margin-left: .8em;
 
       &:first-child {
         margin-left: 0;
