--- a/_components/PageArtist/styles.scss
+++ b/_components/PageArtist/styles.scss
@@ -2,6 +2,17 @@
   position: relative;
   padding: 0 .6em;
 
+  &__wrapper {
+    margin: 0 auto;
+    max-width: 1278px;
+    border-top: 1px solid rgba(#fff,.3);
+    padding: 1.8em 0 1.8em;
+    box-sizing: border-box;
+    // text-align: left;
+    position: relative;
+    z-index: 40;
+  }
+
   .iframe-holder {
     max-width: 777px;
     margin-left: auto;
@@ -10,7 +21,7 @@
     &__ratio {
       position: relative;
       @include ratio(100%,16,9);
-      margin-bottom: 2em;
+      // margin-bottom: 2em;
     }
 
     &__iframe {
