--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,12 @@ layout: compress
     </div>
   </div>
 
-  <script src="{{ site.baseurl }}/assets/js/bundle.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/bundle.min.js"></script>
 
+  <!-- require.js -->
+  <!-- <script async data-main="{{ site.baseurl }}/assets/js/require-config.js" src="{{ site.baseurl }}/assets/js/require.js"></script> -->
+
+  <!-- firebase.js -->
   <!-- <div id="app" style="font-size: 6px; background-color: #000;"></div>
 
   <script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
