--- a/_components/FooterBlock/styles.scss
+++ b/_components/FooterBlock/styles.scss
@@ -45,10 +45,17 @@
   &__copyright {
     margin: 2em 0;
 
-    [class^="icon-"] {
-      font-size: 20px;
-      margin-top: .5em;
-      display: inline-block;
+    // [class^="icon-"] {
+    //   font-size: 20px;
+    //   margin-top: .5em;
+    //   display: inline-block;
+    // }
+
+    &-logo {
+      display: block;
+      margin: .5em auto 0;
+      max-width: 30px;
+      height: auto;
     }
   }
 
