huge updates :coffee: :coffee: :coffee: :coffee: :coffee: :coffee:

--- a/_components/BlockFooter/styles.scss
+++ b/_components/BlockFooter/styles.scss
@@ -1,4 +1,4 @@
-.footer-block {
+.block-footer {
   padding: 100px .6em;
   background-color: #000;
   font-size: 12px;
@@ -86,7 +86,6 @@
     border: 1px solid rgba(#fff,.1);
     border-width: 1px 0;
     font-size: .8em;
-    display: none;
 
     a {
       display: inline-block;
