--- a/_layouts/page-artist.html
+++ b/_layouts/page-artist.html
@@ -2,4 +2,5 @@
 layout: default
 ---
 
+{% include ReleaseListSwiper/index.html class='js-release-list-swiper--release-page' %}
 {% include PageArtist/index.html %}
