--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 
-{% if page.date %}<p>{{ page.date | date_to_long_string }}</p>{% endif %}
+{% if page.date %}
+  <p>{{ page.date | date_to_long_string }}</p>
+{% endif %}
 
 {{ content }}
