--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -22,6 +22,8 @@
 @import '_components/PageRelease/styles';
 @import '_components/PageRelease/page-release-content';
 @import '_components/PageArtist/styles';
+@import '_components/PageArtist/photo-cover';
+@import '_components/PageArtist/facebook-widget';
 @import '_components/PageArtist/page-artist-content';
 @import '_components/SVG/deco-triangle';
 @import '_components/IframeSize/styles';
