add canonicalurl, add DisqusComments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@ layout: compress
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
   <link rel="shortcut icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-32.png">
   <link rel="apple-touch-icon" href="https://content.sentimony.com/assets/img/favicons/sentimony/favicon-144.png">
+  <link rel="canonical" href="{{ site.canonicalurl }}{{ page.url }}" />
 </head>
 <body>
 
