--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,25 +20,49 @@ layout: compress
 </head>
 <body>
 
-  <div class="flex-sticky">
-    <div class="flex-sticky__header">
-      {% include BlockMainMenu/index.html %}
+  <div class="swiper-container js-swiper-mob-menu">
+    <div class="swiper-wrapper">
+
+      <div class="swiper-slide">
+        <div class="flex-sticky">
+          <div class="flex-sticky__header">
+            {% include BlockMainMenu/index.html %}
+          </div>
+          <div class="flex-sticky__content">
+            {{ content }}
+            {% include BlockDonate/index.html %}
+          </div>
+          <div class="flex-sticky__footer">
+            {% include BlockFooter/index.html %}
+          </div>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <ul class="">
+          <li><a href="{{ site.baseurl }}/" class="">Home</a></li>
+          <li><a href="{{ site.baseurl }}/news/" class="">News</a></li>
+          <li><a href="{{ site.baseurl }}/releases/" class="">Releases</a></li>
+          <li><a href="{{ site.baseurl }}/artists/" class="">Artists</a></li>
+          <li><a href="{{ site.baseurl }}/events/" class="">Events</a></li>
+          <li><a href="{{ site.baseurl }}/friends/" class="">Friends</a></li>
+          <li><a href="{{ site.baseurl }}/contacts/" class="">Contacts</a></li>
+        </ul>
+      </div>
+
     </div>
-    <div class="flex-sticky__content">
-      {{ content }}
-      {% include BlockDonate/index.html %}
-    </div>
-    <div class="flex-sticky__footer">
-      {% include BlockFooter/index.html %}
-    </div>
+
+    <div class="js-swiper-mob-menu-open"></div>
+    <div class="js-swiper-mob-menu-close"></div>
   </div>
 
-  <script src="{{ site.baseurl }}/assets/js/bundle.min.js"></script>
+  <script async data-main="{{ site.baseurl }}/assets/js/require.config.js" src="{{ site.baseurl }}/assets/js/require.js"></script>
 
   {% comment %}
-  <!-- require.js -->
-  <script async data-main="{{ site.baseurl }}/assets/js/require-config.js" src="{{ site.baseurl }}/assets/js/require.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/bundle.min.js"></script>
+  {% endcomment %}
 
+  {% comment %}
   <!-- firebase.js -->
   <div id="app" style="font-size: 6px; background-color: #000;"></div>
 
