--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -28,3 +28,4 @@
 @import '_components/SVG/deco-triangle';
 @import '_components/IframeSize/styles';
 @import '_components/BlockFooter/styles';
+@import '_components/BlockMobMenu/styles';
