upd mob menu styles

--- a/_components/BlockMobMenu/styles.scss
+++ b/_components/BlockMobMenu/styles.scss
@@ -16,6 +16,7 @@
     cursor: pointer;
     margin: .65em .65em;
     padding: 1.0em 1.0em;
+    border-radius: 6px;
 
     &:hover {
       background-color: $colorBgLight;
