--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@ layout: compress
         </div>
       </div>
 
-      <div class="swiper-slide">
-        <ul class="">
+      <div class="mob-menu__mob-menu swiper-slide">
+        <ul class="mob-menu__mob-menu-ul">
           <li><a href="{{ site.baseurl }}/" class="">Home</a></li>
           <li><a href="{{ site.baseurl }}/news/" class="">News</a></li>
           <li><a href="{{ site.baseurl }}/releases/" class="">Releases</a></li>
