--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,8 +91,10 @@ layout: compress
   </script>
   {% endcomment %}
 
-  {% include Analytics/google-analytics.html %}
-  {% include Analytics/yandex-metrika.html %}
+  {% if site.env == 'prod' %}
+    {% include Analytics/google-analytics.html %}
+    {% include Analytics/yandex-metrika.html %}
+  {% endif %}
 
 </body>
 </html>
